fixed overflow on overview page

--- a/admin/admin-style/_admin-wrapper.scss
+++ b/admin/admin-style/_admin-wrapper.scss
@@ -11,7 +11,7 @@
 
         .admin-dashboard-bottom {
             // height: 100%;
-            height: calc(100vh - 70px);
+            height: calc(100vh - 100px);
         }
 
         .admin-left-card,
